[tool.poetry]
name = "fastapi_app"
version = "0.1.0"
description = ""
authors = ["Matheus Rodrigues <matheusrg21@hotmail.com>"]
packages = [
  { include = "fastapi_app" }
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
SQLAlchemy = "^1.4.17"
passlib = "^1.7.4"
python-jose = "^3.2.0"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
